# anime-lakehouse

./: .gitignore  Makefile  README.md  databricks.yml  pyproject.toml
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml
ci/: gate.sh  setup-runner.sh  test_gate.sh
databricks/: databricks.yml
databricks/jobs/: ingest_media.py
demo/: data.json  simlab.html
docs/: OPERATIONS-LOG.md  PLAN-wave1-flywheel.md  PLAN-wave2-completion.md  ci-linux-box.md  databricks-free-edition.md
evals/: README.md  run_eval.py
evals/golden/: title_moods_golden.jsonl
labboard/: conftest.py  index.html  label.html  report.html  server.py  test_labboard.py
labboard/fixtures/: fake_gate.sh
orchestration/: definitions.py
scripts/: export_demo_data.py  freeze_goldens.py
src/anime_lakehouse/ingest/: anilist.py  simulate_playback.py
src/anime_lakehouse/llm/: enrich.py
tests/: test_simulator.py
tests/fixtures/: anilist_media_snapshot.parquet
tests/golden/: dim_title_summary.golden.csv  episode_dropoff.golden.csv
transform/: dbt_project.yml  profiles.yml
transform/macros/: bronze.sql  dialect.sql
transform/models/marts/: dim_title.sql  dim_user.sql  episode_dropoff.sql  fact_playback.sql  schema.yml
transform/models/staging/: sources.yml  stg_media.sql  stg_playback.sql  stg_users.sql
