[project]
name = "anime-lakehouse"
version = "0.1.0"
description = "End-to-end lakehouse for a streaming R&D lab: medallion ingestion, dimensional models, LLM enrichment with trace-based evals"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests>=2.32",
    "duckdb>=1.1",
    "pyarrow>=18.0",
    "dbt-duckdb>=1.9",
]

[project.optional-dependencies]
orchestration = [
    "dagster>=1.9",
    "dagster-dbt>=0.25",
    "dagster-webserver>=1.9",
]
llm = [
    "anthropic>=0.40",
    "langfuse>=2.50",
]
databricks = [
    "dbt-databricks>=1.9",
]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "labboard"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anime_lakehouse"]
